--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,8 +1,7 @@
 .main {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
+  width: 100%;
 }
 
 .divider {
