--- a/src/components/Splash/Splash.module.css
+++ b/src/components/Splash/Splash.module.css
@@ -6,7 +6,7 @@
   padding: 6rem 2rem;
   position: relative;
   min-height: 85vh;
-  overflow: hidden;
+  width: 100%;
 }
 
 .backgroundEffect {
